# MusicVisualizer

./: CMakeLists.txt  README.md  images.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  themes.qrc
common/: ringbuffer.cpp  ringbuffer.h  settingsvalues.h
controllers/: musiccontroller.cpp  musiccontroller.h  visualizercontroller.cpp  visualizercontroller.h
widgets/: controllerwidget.cpp  controllerwidget.h  controllerwidget.ui  visualizerwidget.cpp  visualizerwidget.h  visualizerwidget.ui
